--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "aurelia-animator-css": "^1.0.2",
     "aurelia-bootstrapper": "^2.1.1",
     "bluebird": "^3.4.1",
-    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
+    "imperavi-kube": "^6.5.2",
     "jquery": "^3.2.1",
     "nprogress": "^0.2.0",
     "requirejs": "^2.3.2",
