--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aurelia-animator-css": "^1.0.2",
     "aurelia-bootstrapper": "^2.1.1",
+    "aurelia-fetch-client": "^1.1.3",
     "bluebird": "^3.4.1",
     "font-awesome": "^4.7.0",
     "nprogress": "^0.2.0",
